# csiapps-py

./: .gitignore  404.html  LICENSE  PORTING_PLAN.md  README.md  mkdocs.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml  docs.yml
docs/: api.md  index.md  parity.md  rest-api.md  sandbox.md  shiny-apps.md  usage.md
examples/: app.py  warehouse_ingest.py
src/csiapps/: __init__.py  app.py  auth.py  client.py  config.py  sandbox.py
tests/: conftest.py  test_app.py  test_auth.py  test_client.py  test_config.py  test_sandbox.py  test_sandbox_registry.py  test_smoke.py
