[project]
name = "csiapps"
version = "0.1.2"
description = "Helper functions and utilities for CSI data warehouse ingestion and Shiny web applications (Python port of the csiapps R package)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "David Awosoga", email = "dawosoga@csiontario.ca" },
    { name = "Kyu Min Shim", email = "kmshim@uwaterloo.ca" },
]
keywords = ["csi", "warehouse", "shiny", "oauth2", "csiontario"]
dependencies = [
    "httpx>=0.27",
    "jsonschema>=4.21",
    "faker>=25",
    "shiny>=1.0",
]

[project.urls]
Homepage = "https://github.com/CSIOntario/csiapps-py"
Issues = "https://github.com/CSIOntario/csiapps-py/issues"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "respx>=0.21",  # httpx mocking for client tests (phase 3)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csiapps"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
